--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
       </div>
     </div>
   </section>
-  <section id="agenda" class="bg-gradient-to-br from-[#0A2B5B] to-[#22406B] py-24">
+  <!-- <section id="agenda" class="bg-gradient-to-br from-[#0A2B5B] to-[#22406B] py-24">
     <div class="container">
       <div class="grid grid-cols-12">
         <div class="agenda-left relative col-span-12 items-end pb-0 lg:col-span-3 lg:block">
@@ -99,17 +99,17 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section id="speakers">
     <div class="container">
       <div class="grid grid-cols-12">
         <div class="faq-left relative col-span-12 items-end py-24 pr-8 lg:col-span-4 lg:block">
           <div class="bg-to-start bg-lightblue">
-            <img
+            <!-- <img
               src="/logo-white.svg"
               alt=""
               class="grid-col absolute -bottom-8 right-4 hidden w-[520px] lg:mb-8 lg:block"
-            />
+            /> -->
           </div>
           <div class="faq-text text-white">
             <h1 class="mb-3 text-3xl font-bold md:text-5xl">Our Esteemed Speakers</h1>
