--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
                 thought-provoking keynotes from industry leaders and network with fellow developers.
               </p>
               <div class="flex">
-                <Button color="primary" className="min-w-44 flex-grow text-xl xl:text-2xl"> Get Tickets </Button>
+                <Button color="primary" className="min-w-44 flex-grow text-xl xl:text-2xl" href="https://www.loket.com/event/idsw2024"> Get Tickets </Button>
               </div>
             </div>
           </div>
