--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,12 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
                 thought-provoking keynotes from industry leaders and network with fellow developers.
               </p>
               <div class="flex">
-                <Button color="primary" className="min-w-44 flex-grow text-xl xl:text-2xl" href="https://www.loket.com/event/idsw2024"> Get Tickets </Button>
+                <Button
+                  color="primary"
+                  className="min-w-44 flex-grow self-center text-xl xl:text-2xl"
+                  href="https://www.loket.com/event/idsw2024">
+                  Get Tickets
+                </Button>
               </div>
             </div>
           </div>
@@ -61,14 +66,14 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
 
   <section id="about" class="bg-gradient-to-b from-[#030E1C] to-[#061C3C] py-12">
     <div class="container">
-      <div class="grid grid-cols-12">
-        <div class="about-left col-span-12 gap-10 py-16 pb-0 lg:col-span-4 lg:block">
-          <h2 class="text-3xl font-bold text-gray-400 md:text-5xl">Built by the Community</h2>
+      <div class="grid grid-cols-12 items-center">
+        <div class="about-left col-span-12 mb-8 gap-10 pb-0 lg:col-span-4 lg:block">
+          <h2 class="text-2xl font-bold !leading-normal text-white md:text-5xl">Built by the Community</h2>
         </div>
         <div
-          class="about-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col py-16 lg:col-span-8 lg:col-start-5">
-          <p class="col-span-12 text-xl leading-10 text-gray-200 md:text-2xl lg:col-span-8 lg:col-start-2">
-            IDSW is Indonesia's first software developer conference.<br /><br />Organized by <a
+          class="about-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col lg:col-span-8 lg:col-start-5">
+          <p class="col-span-12 text-xl !leading-10 text-gray-200 md:text-2xl lg:col-span-8 lg:col-start-2">
+            IDSW is Indonesia's first software developer conference. Organized by <a
               href="https://perkodi.org/"
               class="font-semibold underline">Perkodi</a
             > and <span class="font-semibold">various tech communities</span>, its mission is to offer annual in-depth
@@ -100,6 +105,28 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
       </div>
     </div>
   </section> -->
+  <section id="expertise">
+    <div class="container py-12">
+      <div class="grid grid-cols-12">
+        <div class="expertise-left relative col-span-12 items-end lg:col-span-4 lg:block">
+          <h1 class="mb-3 text-3xl font-bold !leading-relaxed lg:text-4xl">Share Your Expertise at IDSW 2024</h1>
+        </div>
+        <div
+          class="expertise-text relative col-span-12 mb-8 flex-shrink flex-col leading-relaxed lg:col-span-5 lg:text-xl lg:leading-9">
+          Got tech insights to share? Submit your paper and contribute to engaging discussions on the latest trends and
+          innovations.
+        </div>
+        <div class="expertise-button lg: relative col-span-12 flex items-center lg:col-span-3 lg:pl-12">
+          <Button
+            color="primary"
+            className="min-w-44 flex-shrink text-xl xl:text-2xl"
+            href="https://www.loket.com/event/idsw2024">
+            Learn More
+          </Button>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="speakers">
     <div class="container">
       <div class="grid grid-cols-12">
