--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,30 +5,17 @@ import Menu from "./Menu.astro";
 <header class="absolute left-0 right-0 top-0 w-full">
   <nav>
     <div class="container flex flex-wrap items-center justify-between p-4">
-      <a
-        href="https://flowbite.com/"
-        class="flex items-center space-x-3 rtl:space-x-reverse"
-      >
-        <span
-          class="self-center whitespace-nowrap text-2xl font-semibold text-white"
-          >IDSW</span
-        >
+      <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <span class="self-center whitespace-nowrap text-2xl font-semibold text-white">IDSW</span>
       </a>
       <button
         data-collapse-toggle="navbar-default"
         type="button"
         class="inline-flex h-10 w-10 items-center justify-center rounded-lg p-2 text-sm text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 md:hidden"
         aria-controls="navbar-default"
-        aria-expanded="false"
-      >
+        aria-expanded="false">
         <span class="sr-only">Open main menu</span>
-        <svg
-          class="h-5 w-5"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 17 14"
-        >
+        <svg class="h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
           <path
             stroke="currentColor"
             stroke-linecap="round"
