--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         <div class="hero-left col-span-12 flex flex-grow flex-wrap items-end gap-10 py-24 lg:col-span-4 lg:block">
           <img src="/logo.svg" alt="" class="grid-col w-[320px] lg:mb-8" />
           <div class="hero-text text-gray- flex flex-col gap-4">
-            <h1 class="mb-3 text-3xl font-bold xl:text-4xl">Indonesia Software Developer Conference</h1>
+            <h1 class="mb-3 text-3xl font-bold">Indonesia Software Developer Conference</h1>
             <div class="flex flex-col items-start gap-2 text-lg">
               <p>16-17th November, 2024</p>
               <a href="https://maps.app.goo.gl/yu2vU1EhWSZ2Gxse9" class="underline">GetCourse Hall, Jakarta Selatan</a>
@@ -72,7 +72,8 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         </div>
         <div
           class="about-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col lg:col-span-8 lg:col-start-5">
-          <p class="col-span-12 text-xl !leading-10 text-gray-200 md:text-2xl lg:col-span-8 lg:col-start-2">
+          <p
+            class="col-span-12 text-sm !leading-relaxed text-gray-200 sm:text-xl md:text-2xl lg:col-span-8 lg:col-start-2">
             IDSW is Indonesia's first software developer conference. Organized by <a
               href="https://perkodi.org/"
               class="font-semibold underline">Perkodi</a
@@ -89,7 +90,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         <div class="agenda-left relative col-span-12 items-end pb-0 lg:col-span-3 lg:block">
           <div class="bg-to-start bg-primary-dark"></div>
           <div class="agenda-text text-white">
-            <h1 class="mb-12 text-3xl font-bold lg:text-5xl">Event Agenda</h1>
+            <h2 class="mb-12 text-3xl font-bold lg:text-5xl">Event Agenda</h2>
             <div class="flex flex-col gap-5 text-left">
               <button class="w-full bg-lightblue p-5 text-left text-2xl font-bold">First Day</button>
               <button
@@ -109,7 +110,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
     <div class="container py-12">
       <div class="grid grid-cols-12">
         <div class="expertise-left relative col-span-12 items-end lg:col-span-4 lg:block">
-          <h1 class="mb-3 text-3xl font-bold !leading-relaxed lg:text-4xl">Share Your Expertise at IDSW 2024</h1>
+          <h2 class="mb-3 text-3xl font-bold !leading-relaxed lg:text-4xl">Share Your Expertise at IDSW 2024</h2>
         </div>
         <div
           class="expertise-text relative col-span-12 mb-8 flex-shrink flex-col leading-relaxed lg:col-span-5 lg:text-xl lg:leading-9">
@@ -140,9 +141,9 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
             />
           </div>
           <div class="faq-text text-white">
-            <h1 class="mb-0 w-2/3 text-2xl font-bold !leading-normal md:mb-8 md:text-3xl lg:text-4xl">
+            <h2 class="mb-0 w-2/3 text-2xl font-bold !leading-normal md:mb-8 md:text-3xl lg:text-4xl">
               Our Esteemed Speakers
-            </h1>
+            </h2>
             <p class="hidden text-xl leading-relaxed opacity-80 lg:block">
               Discover valuable insights and perspectives from our distinguished speakers as they share their expertise,
               experiences, and innovative ideas to inspire.
@@ -170,13 +171,13 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         <div class="faq-left relative col-span-12 hidden items-end py-24 pr-8 lg:col-span-4 lg:block">
           <div class="bg-to-start bg-primary-dark"></div>
           <div class="faq-text text-white">
-            <h1 class="mb-3 text-3xl font-bold !leading-relaxed md:text-4xl">Frequently Asked Questions</h1>
+            <h2 class="mb-3 text-3xl font-bold !leading-relaxed md:text-4xl">Frequently Asked Questions</h2>
             <p class="text-lg text-gray-400">Everything you need to know about the event.</p>
           </div>
         </div>
         <div class="faq-right relative col-span-12 flex-shrink flex-col py-12 lg:col-span-8 lg:px-16 lg:py-24">
           <div class="bg-to-end bg-[#E7F1FF]"></div>
-          <h1 class="mb-8 text-3xl font-bold md:hidden">Frequently Asked Questions</h1>
+          <h2 class="mb-8 text-3xl font-bold md:hidden">Frequently Asked Questions</h2>
           <Accordion data={faqData} client:load />
         </div>
       </div>
