fix: button border radius

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
               <div class="flex">
                 <Button
                   color="primary"
-                  className="min-w-44 flex-grow self-center text-xl xl:text-2xl"
+                  className="min-w-44 flex-grow self-center rounded-xl px-0 text-xl xl:text-2xl"
                   href="https://www.loket.com/event/idsw2024">
                   Get Tickets
                 </Button>
@@ -120,7 +120,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
         <div class="expertise-button lg: relative col-span-12 mt-5 flex items-start lg:col-span-3 lg:pl-12">
           <Button
             color="primary"
-            className="min-w-44 flex-shrink text-xl xl:text-2xl"
+            className="min-w-44 flex-shrink rounded-2xl text-xl xl:text-2xl"
             href="https://www.papercall.io/idsw-2024">
             Learn More
           </Button>
