feat: add proper meta tag and og image

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,6 +11,32 @@ import "../styles/global.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta property="og:image" content="/og.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="/og.jpg" />
+    <meta
+      name="description"
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+    />
+    <meta
+      name="keywords"
+      content="Indonesia Software Developer Conference, IDSW, software development, conference, Jakarta, 2024, developers, networking, industry leaders"
+    />
+    <meta name="author" content="IDSW Organizers" />
+    <meta property="og:title" content="Indonesia Software Developer Conference 2024" />
+    <meta
+      property="og:description"
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+    />
+    <meta property="og:url" content="https://www.idsw.dev" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="IDSW" />
+    <meta name="twitter:title" content="Indonesia Software Developer Conference 2024" />
+    <meta
+      name="twitter:description"
+      content="Join us for the Indonesia Software Developer Conference (IDSW) on 16-17th November, 2024. Hear thought-provoking keynotes from industry leaders and network with fellow developers at GetCourse Hall, Jakarta Selatan."
+    />
+
     <title>IDSW</title>
     <PostHog />
   </head>
