chore: cleanup unused code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import type { Agenda } from "../@types/agenda";
+// import type { Agenda } from "../@types/agenda";
 import type { Faq } from "../@types/faq";
 import type { Speaker } from "../@types/speakers";
 import Accordion from "../components/Accordion";
@@ -9,11 +9,11 @@ import Timer from "../components/Timer";
 import MainLayout from "../layouts/MainLayout.astro";
 const eventDate = new Date(2024, 10, 17, 9, 0, 0);
 const faq = await Astro.glob("../data/faq.json");
-const agenda = await Astro.glob("../data/agenda.json");
+// const agenda = await Astro.glob("../data/agenda.json");
 const speakers = await Astro.glob("../data/speakers.json");
 
 const faqData: Faq[] = Object.values(faq).map((item) => (item as any).default)[0];
-const agendaData: Agenda[] = Object.values(agenda).map((item) => (item as any).default)[0];
+// const agendaData: Agenda[] = Object.values(agenda).map((item) => (item as any).default)[0];
 const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as any).default)[0];
 ---
 
