--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -7,12 +7,11 @@ interface Props {
 }
 
 const { data }: Props = Astro.props;
-const imageURL = `${data.image}`;
 const images = await Astro.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}");
-const image = images.find((img) => img.default.src.includes(imageURL));
+const image = images.find((img) => img.default.src.includes(data.imageName));
 
 if (!image) {
-  throw new Error(`"${imageURL}" does not exist in glob: "src/data/images/speakers/*.{png,jpg,jpeg,svg,webp}"`);
+  throw new Error(`"${data.imageName}" does not exist in glob: "src/data/images/speakers/*.{png,jpg,jpeg,svg,webp}"`);
 }
 ---
 
