--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -1,23 +1,32 @@
 ---
-import { Image, Picture } from "astro:assets";
+import { Image } from "astro:assets";
 import type { Agenda } from "../@types/agenda";
 
-type Props = {
+interface Props {
   data: Agenda;
-};
+}
 
-const { data } = Astro.props;
-const imageURL = "../images" + data.speaker.image;
-const images = import.meta.glob<{ default: ImageMetadata }>("../images/speakers/*.{png,jpg,jpeg,svg,webp}");
-if (!images[imageURL])
-  throw new Error(`"${imageURL}" does not exist in glob: "src/images/speakers/*.{jpeg,jpg,png,gif}"`);
-const image = images[imageURL];
+const { data }: Props = Astro.props;
+const images = await Astro.glob<{ default: ImageMetadata }>("../data/images/speakers/*.{png,jpg,jpeg,svg,webp}");
+const image = images.find((img) => img.default.src.includes(data.speaker.imageName));
+
+if (!image) {
+  throw new Error(
+    `"${data.speaker.imageName}" does not exist in glob: "src/data/images/speakers/*.{png,jpg,jpeg,svg,webp}"`,
+  );
+}
 ---
 
 <div
   class="event-card col-span-12 mb-8 grid grid-cols-subgrid grid-rows-[auto,1fr] bg-gradient-to-r from-[#2F4D78] to-[#28456F] text-white lg:col-span-7 lg:grid-rows-1">
   <div class="event-card-image col-span-4 col-start-1 row-span-2 lg:col-span-2">
-    <Image src={image()} alt={data.speaker.name} width={200} height={200} class:list={["h-full w-full object-cover"]} />
+    <Image
+      src={image.default}
+      alt={data.speaker.name}
+      width={200}
+      height={200}
+      class:list={["h-full w-full object-cover"]}
+    />
   </div>
   <div class="event-card-speaker col-span-7 col-start-5 ml-5 py-4 lg:col-span-2 lg:col-start-3 lg:ml-0">
     <h3 class="event-card-speaker-name mb-3 text-xl font-bold">
