fix: font sizes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
               />
             </div>
             <div class="flex flex-col gap-6 lg:flex-row">
-              <p class="text-balance text-xl font-light text-white opacity-80 lg:text-start">
+              <p class="text-lg font-light text-white opacity-80 md:text-xl lg:text-start">
                 Join us for the first annual conference for Indonesia software developers, where you can hear
                 thought-provoking keynotes from industry leaders and network with fellow developers.
               </p>
@@ -65,13 +65,12 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
   <section id="about" class="bg-gradient-to-b from-[#030E1C] to-[#061C3C] py-12">
     <div class="container">
       <div class="grid grid-cols-12 items-center">
-        <div class="about-left col-span-12 mb-8 gap-10 pb-0 lg:col-span-4 lg:block">
+        <div class="about-left col-span-12 mb-8 gap-10 pb-0 lg:col-span-4 lg:mb-0 lg:block">
           <h2 class="text-2xl font-bold !leading-normal text-white md:text-5xl">Built by the Community</h2>
         </div>
         <div
           class="about-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col lg:col-span-8 lg:col-start-5">
-          <p
-            class="col-span-12 text-sm !leading-relaxed text-gray-200 sm:text-xl md:text-2xl lg:col-span-8 lg:col-start-2">
+          <p class="col-span-12 text-sm !leading-relaxed text-gray-200 sm:text-xl lg:col-span-8 lg:col-start-2">
             IDSW is Indonesia's first software developer conference. Organized by <a
               href="https://perkodi.org/"
               class="font-semibold underline">Perkodi</a
