fix: timer area should be rounded

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
           class="hero-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col py-28 text-white lg:col-span-8 lg:col-start-5">
           <div class="bg-to-end bg-primary-dark"></div>
           <div class="col-start-1 -col-end-1 lg:col-start-2">
-            <div class="timer-area mb-12 flex items-center justify-center px-10 py-12 lg:py-24">
+            <div class="timer-area mb-12 flex items-center justify-center rounded-lg px-10 py-12 lg:py-24">
               <Timer
                 client:only="react"
                 date={eventDate}
