fix: mobile screen section patting

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,8 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
   <section id="hero" class="min-h-full">
     <div class="container">
       <div class="grid grid-cols-12">
-        <div class="hero-left col-span-12 flex flex-grow flex-wrap items-end gap-10 py-24 lg:col-span-4 lg:block">
+        <div
+          class="hero-left col-span-12 flex flex-grow flex-wrap items-end gap-10 pb-14 pt-24 md:py-24 lg:col-span-4 lg:block">
           <img src="/logo.svg" alt="" class="grid-col w-[320px] lg:mb-8" />
           <div class="hero-text text-gray- flex flex-col gap-4">
             <h1 class="mb-3 text-3xl font-bold">Indonesia Software Developer Conference</h1>
@@ -46,7 +47,7 @@ const speakersData: Speaker[] = Object.values(speakers).map((item) => (item as a
           </div>
         </div>
         <div
-          class="hero-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col py-28 text-white lg:col-span-8 lg:col-start-5">
+          class="hero-right relative col-span-12 col-start-1 grid grid-cols-subgrid flex-col py-14 text-white md:py-28 lg:col-span-8 lg:col-start-5">
           <div class="bg-to-end bg-primary-dark"></div>
           <div class="col-start-1 -col-end-1 lg:col-start-2">
             <div class="timer-area mb-12 flex items-center justify-center rounded-lg px-10 py-12 lg:py-24">
